Fixed the style to remove the gap between header h1 and content in Overview. Also added row class to div that wraps fields in overview.

--- a/public/src/css/includes/overview.less
+++ b/public/src/css/includes/overview.less
@@ -103,6 +103,7 @@
           font-weight: 200;
           color: @font-color-grey;
           padding: 10px 15px;
+          margin-bottom: 0;
         }
 
         .body{
@@ -113,10 +114,10 @@
           .field {
 
             padding: 10px 0px;
-            margin-bottom: 25px;
+            margin-right: 10px;
 
             .label {
-              padding-top: 9px;
+              padding-top: 11px;
               text-align: right;
               color: #676a6c !important;
               font-weight: 500 !important;
